--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-scripts": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "tachyons": "^4.12.0"
   },
   "scripts": {
